Bug 102473 - 'X' is displayed over the email id and is not functional for chat window. The display name was moved into its own span. Some of the styles like width, text-overlap etc. also needed to be applied to it.
https://bugzilla.zimbra.com/show_bug.cgi?id=102473

Copied from Perforce
 Change: 560319

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Converse.js (Web-based XMPP instant messaging client)
  * http://conversejs.org
@@ -1547,6 +1548,7 @@
 #conversejs span.header-contact-name {
   position: fixed;
   margin-top: 0.1rem;
-  margin-left: 0.3rem; }
-
-/*# sourceMappingURL=converse.css.map */
+  margin-left: 0.3rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 145px; }
